build_sound_latest.txt
Processing sound_node_volvo (platform: espressif32@6.7.0; board: esp32dev; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32dev.html
PLATFORM: Espressif 32 (6.7.0) > Espressif ESP32 Dev Module
HARDWARE: ESP32 240MHz, 320KB RAM, 4MB Flash
DEBUG: Current (cmsis-dap) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - framework-arduinoespressif32 @ 3.20016.0 (2.0.16) 
 - tool-esptoolpy @ 1.40501.0 (4.5.1) 
 - toolchain-xtensa-esp32 @ 8.4.0+2021r2-patch5
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 42 compatible libraries
Scanning dependencies...
Dependency Graph
|-- PS4_Controller_Host @ 1.1.1+sha.b58a05d
|-- common_defs @ 0.0.0+20260315170202.sha.45b8759
|-- PwmBroker @ 1.0.0+sha.ae043d5
|-- DcMotorCore @ 1.0.0+sha.b23fa87
|-- ServoCore @ 0.1.0+sha.93bbcad
|-- Tone32 @ 1.0.0+sha.3e92d7f
|-- FastLED @ 3.3.3
|-- statusLED @ 1.0.0-fork
|-- EEPROM @ 2.0.0
Building in release mode
Compiling C:\Users\Arnaud\AppData\Local\Temp\PlatformIO\build\Open_Node_RC_Core\sound_node_volvo\src\sound_module\config\boards\sound_board_esp32.cpp.o
C:\Users\Arnaud\.platformio\penv\Scripts\pio.exe : 
src/sound_module/config/boards/sound_board_esp32.cpp:114:57: error: 
'SRV1_OUTPUT_PIN' was not declared in this scope
Au caractère Ligne:1 : 34
+ ... atest.txt"; C:\Users\Arnaud\.platformio\penv\Scripts\pio.exe run -e s ...
+                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (src/sound_modul...d in this scope 
   :String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
   { .ID = SRV_CH1, .infoName = "CH1_STEER",   .pwmPin = SRV1_OUTPUT_PIN },
                                                         ^~~~~~~~~~~~~~~
src/sound_module/config/boards/sound_board_esp32.cpp:114:57: note: suggested 
alternative: 'ESC_OUT_PIN'
   { .ID = SRV_CH1, .infoName = "CH1_STEER",   .pwmPin = SRV1_OUTPUT_PIN },
                                                         ^~~~~~~~~~~~~~~
                                                         ESC_OUT_PIN
src/sound_module/config/boards/sound_board_esp32.cpp:115:57: error: 
'SRV2_OUTPUT_PIN' was not declared in this scope
   { .ID = SRV_CH2, .infoName = "CH2_SHIFT",   .pwmPin = SRV2_OUTPUT_PIN },
                                                         ^~~~~~~~~~~~~~~
src/sound_module/config/boards/sound_board_esp32.cpp:115:57: note: suggested 
alternative: 'ESC_OUT_PIN'
   { .ID = SRV_CH2, .infoName = "CH2_SHIFT",   .pwmPin = SRV2_OUTPUT_PIN },
                                                         ^~~~~~~~~~~~~~~
                                                         ESC_OUT_PIN
src/sound_module/config/boards/sound_board_esp32.cpp:116:57: error: 
'SRV3_OUTPUT_PIN' was not declared in this scope
   { .ID = SRV_CH3, .infoName = "CH3_WINCH",   .pwmPin = SRV3_OUTPUT_PIN },
                                                         ^~~~~~~~~~~~~~~
src/sound_module/config/boards/sound_board_esp32.cpp:116:57: note: suggested 
alternative: 'ESC_OUT_PIN'
   { .ID = SRV_CH3, .infoName = "CH3_WINCH",   .pwmPin = SRV3_OUTPUT_PIN },
                                                         ^~~~~~~~~~~~~~~
                                                         ESC_OUT_PIN
src/sound_module/config/boards/sound_board_esp32.cpp:117:57: error: 
'SRV4_OUTPUT_PIN' was not declared in this scope
   { .ID = SRV_CH4, .infoName = "CH4_COUPLER", .pwmPin = SRV4_OUTPUT_PIN },
                                                         ^~~~~~~~~~~~~~~
src/sound_module/config/boards/sound_board_esp32.cpp:117:57: note: suggested 
alternative: 'ESC_OUT_PIN'
   { .ID = SRV_CH4, .infoName = "CH4_COUPLER", .pwmPin = SRV4_OUTPUT_PIN },
                                                         ^~~~~~~~~~~~~~~
                                                         ESC_OUT_PIN
*** [C:\Users\Arnaud\AppData\Local\Temp\PlatformIO\build\Open_Node_RC_Core\soun
d_node_volvo\src\sound_module\config\boards\sound_board_esp32.cpp.o] Error 1
========================= [FAILED] Took 17.20 seconds =========================

Environment       Status    Duration
----------------  --------  ------------
sound_node_volvo  FAILED    00:00:17.196
==================== 1 failed, 0 succeeded in 00:00:17.196 ====================
